added missing db directory and correct INSTALL

--- a/INSTALL
+++ b/INSTALL
@@ -4,6 +4,6 @@ sudo lighttpd-enable-mod fastcgi accesslog
 
 sudo pip install flask
 sudo pip install flask-login
-sudo pip install flask-wtform
+sudo pip install flask-wtf
 sudo pip install flask-sqlalchemy
 sudo pip install restclient
