users plugins add, edit, delete and list

--- a/INSTALL
+++ b/INSTALL
@@ -7,3 +7,4 @@ sudo pip install flask-login
 sudo pip install flask-wtf
 sudo pip install flask-sqlalchemy
 sudo pip install restclient
+sudo pip install wtforms-json
