--- a/INSTALL
+++ b/INSTALL
@@ -8,6 +8,7 @@ sudo pip install flask-sqlalchemy
 sudo pip install restclient
 sudo pip install wtforms-json
 sudo pip install flask-principal
+sudo pip install Flask-Babel
 
 You need to execute the setup.py to create the database.
 
