--- a/INSTALL
+++ b/INSTALL
@@ -9,9 +9,10 @@ sudo pip install restclient
 sudo pip install wtforms-json
 sudo pip install flask-principal
 sudo pip install Flask-Babel
+sudo pip install Flask-Script
 
 You need to execute the setup.py to create the database.
 
-$ python ./setup.py
+$ python ./run init_db
 
 Important note, the DEBUG settings in conf.py need to be true for the moment because we use the reload system from flask in debug mode for the market.
