--- a/app/translations/fr/LC_MESSAGES/messages.po
+++ b/app/translations/fr/LC_MESSAGES/messages.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2013-06-10 21:01-0400\n"
-"PO-Revision-Date: 2013-06-10 21:01-0500\n"
+"POT-Creation-Date: 2013-06-10 21:18-0400\n"
+"PO-Revision-Date: 2013-06-10 21:18-0500\n"
 "Last-Translator: Sylvain Boily <sboily@proformatique.com>\n"
 "Language-Team: fr <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n > 1)\n"
@@ -200,6 +200,10 @@ msgstr "Adresse"
 msgid "Login"
 msgstr "Utilisateur"
 
+#: app/core/servers/forms.py:39
+msgid "Users"
+msgstr "Utilisateurs"
+
 #: app/core/servers/forms.py:41
 msgid "Submit"
 msgstr "Envoyer"
@@ -240,6 +244,14 @@ msgstr "Bienvenue sur la nouvelle interface web de XiVO, développé avec Flask 
 #: app/templates/base.html:45
 msgid "Learn more"
 msgstr "En savoir plus"
+
+#: app/templates/home_server.html:5
+msgid "Hello you're connected to"
+msgstr "Salut vous êtes connecté sur"
+
+#: app/templates/home_server.html:5
+msgid "have fun ! :)"
+msgstr "Amusez vous bien ! :)"
 
 #: app/templates/menu_left.html:7
 msgid "Configuration"
