changed start method for celery

--- a/INSTALL
+++ b/INSTALL
@@ -23,6 +23,6 @@ $ python ./run.py run
 
 and for launching celery
 
-$ celery -A runcelery worker
+$ python ./runcelery.py worker
 
 Important note, the DEBUG settings in conf.py need to be true for the moment because we use the reload system from flask in debug mode for the market.
