--- a/app/translations/fr/LC_MESSAGES/messages.po
+++ b/app/translations/fr/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2013-07-04 10:56-0400\n"
-"PO-Revision-Date: 2013-07-04 11:02-0500\n"
+"PO-Revision-Date: 2013-07-04 11:05-0500\n"
 "Last-Translator: Sylvain Boily <sboily@proformatique.com>\n"
 "Language-Team: fr <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
@@ -76,7 +76,7 @@ msgstr "Nouveau compte ?"
 
 #: app/core/login/templates/login/login.html:14
 msgid "Sign up"
-msgstr "Se connecter"
+msgstr "S'inscrire"
 
 #: app/core/market/views.py:43
 #, python-format
