--- a/app/translations/fr/LC_MESSAGES/messages.po
+++ b/app/translations/fr/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2013-07-04 10:56-0400\n"
-"PO-Revision-Date: 2013-07-04 11:05-0500\n"
+"PO-Revision-Date: 2013-07-04 11:09-0500\n"
 "Last-Translator: Sylvain Boily <sboily@proformatique.com>\n"
 "Language-Team: fr <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
@@ -64,7 +64,7 @@ msgstr "Mot de passe invalide"
 
 #: app/core/login/templates/login/login.html:8
 msgid "Please sign in"
-msgstr "Authentification requise"
+msgstr "S'authentifier"
 
 #: app/core/login/templates/login/login.html:12
 msgid "Sign in"
