--- a/app/translations/fr/LC_MESSAGES/messages.po
+++ b/app/translations/fr/LC_MESSAGES/messages.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
 "POT-Creation-Date: 2013-07-04 15:39-0400\n"
-"PO-Revision-Date: 2013-07-04 15:40-0500\n"
+"PO-Revision-Date: 2013-07-04 15:41-0500\n"
 "Last-Translator: Sylvain Boily <sboily@proformatique.com>\n"
 "Language-Team: fr <LL@li.org>\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
@@ -343,7 +343,7 @@ msgstr "En savoir plus"
 
 #: app/templates/confirm.html:7
 msgid "Are you sure you want to delete this item ?"
-msgstr "Êtes vous sûr de vouloir effecer cette entrée ?"
+msgstr "Êtes vous sûr de vouloir effacer cette entrée ?"
 
 #: app/templates/home_server.html:5
 msgid "Hello you're connected to"
