--- a/INSTALL
+++ b/INSTALL
@@ -1,17 +1,17 @@
 Installation of the dependance
 
 $ apt-get install python-flup python-pip rabbitmq-server
-$ pip install flask flask-login flask-wtf flask-sqlalchemy restclient wtforms-json flask-principal Flask-Babel Flask-Script Yapsy Celery alembic
+$ pip install -r requirements.txt
 
 You need to execute the run.py to create the database.
 
 $ python ./run.py initdb
 
-for launch
+To launch the application
 
 $ python ./run.py run
 
-and for launching celery
+and to launch celery
 
 $ python ./runcelery.py worker
 
@@ -54,7 +54,3 @@ $ cd SOURCES/conf/supervisor
 $ cp * /etc/supervisor/conf.d/
 $ service supervisor stop
 $ service supervisor start
-
-For deploy plugin please install fabric, boto
-
-$ pip install fabric boto
